--- a/Playlist-Mix-Player/Playlist-Mix-Player.csproj
+++ b/Playlist-Mix-Player/Playlist-Mix-Player.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="TagLibSharp" Version="2.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="set_exe_var.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
