--- a/Playlist-Merger/Playlist-Merger.csproj
+++ b/Playlist-Merger/Playlist-Merger.csproj
@@ -10,10 +10,14 @@
 
   <ItemGroup>
     <PackageReference Include="SpotifyAPI.Web" Version="7.2.1" />
+    <PackageReference Include="YamlDotNet" Version="16.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Playlist-Merger-Config.json">
+    <None Update="Merge-Playlists-Deps.yaml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Spotify-API.yaml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
