Spotify login improvements

--- a/Playlist-Merger/Spotify-API-Template.yaml
+++ b/Playlist-Merger/Spotify-API-Template.yaml
@@ -1,2 +1,2 @@
-SpotifyClientId: YOUR_CLIENT_ID
-SpotifyClientSecret: YOUR_CLIENT_SECRET
+ClientId: YOUR_CLIENT_ID
+ClientSecret: YOUR_CLIENT_SECRET
