--- a/Playlist-Merger/Merge-Playlists-Deps.yaml
+++ b/Playlist-Merger/Merge-Playlists-Deps.yaml
@@ -1,5 +1,6 @@
-- Name: Techno
-  IsInclusive: true
-  Deps:
-    - Techno
-    - Ambient Techno
+Playlists:
+  Techno:
+    IsInclusive: true
+    Deps:
+      - Techno
+      - Ambient Techno
