--- a/Playlist-Merger/Merge-Playlists-Deps.yaml
+++ b/Playlist-Merger/Merge-Playlists-Deps.yaml
@@ -1,4 +1,12 @@
+# All:
+#   IsInclusive: false
 Techno:
   Deps:
   - Techno
   - Ambient Techno
+# Trance:
+#   Deps:
+#   - Trance
+#   - Upbeat Vocal Trance
+#   - Downbeat Vocal Trance
+#   - Uplifting Trance
