Publish bats in project folders themselves

--- a/Playlist-Merger/Playlist-Merger.csproj
+++ b/Playlist-Merger/Playlist-Merger.csproj
@@ -14,6 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="manual.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Merge-Playlists-Deps.yaml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
