--- a/Playlist-Merger/Playlist-Merger.csproj
+++ b/Playlist-Merger/Playlist-Merger.csproj
@@ -6,6 +6,9 @@
     <RootNamespace>Playlist_Merger</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<PublishSingleFile>true</PublishSingleFile>
+	<SelfContained>true</SelfContained>
+	<RuntimeIdentifier>win-x64</RuntimeIdentifier>
   </PropertyGroup>
 
   <ItemGroup>
